--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_ble_uart
 description: Package to easily integrate UART over Bluetooth Low Energy into your Flutter app
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/itavero/flutter-ble-uart
 
 environment:
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_blue: ^0.8.0
+  flutter_blue_plus: ^1.1.3
 
 dev_dependencies:
   flutter_test:
